--- a/love/index.html
+++ b/love/index.html
@@ -318,7 +318,7 @@
 	</div>
 
 
-	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
 
 	<script src="js/all.min.js"></script>
 	<script src="js/love.js"></script>
