--- a/love/index.html
+++ b/love/index.html
@@ -39,7 +39,7 @@
 				document.addEventListener('click', autoPlay);
 			</script>
 			<!-- 支持微信环境 -->
-			<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+			<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 			<script>
 				document.addEventListener('WeixinJSBridgeReady', () => {
 					document.getElementById('music').play();
